<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lumi_bg"
    tools:context="ARKstudios.lumiapp.BabyMenu">

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:onClick="menuButtonClicked"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/circle_blue"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="colorButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton9"
        app:srcCompat="@drawable/color_palette"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="settingsButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton3"
        app:srcCompat="@drawable/setting"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:onClick="babyButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/baby"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="notificationsButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton8"
        app:srcCompat="@drawable/notifications"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:onClick="timerButtonClicked"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton6"
        app:srcCompat="@drawable/timer1"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="457dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="7dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mybaby"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automode"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automode_description"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:switchMinWidth="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/cryingmode" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/cryingmode_description" />



    </LinearLayout>

</android.support.constraint.ConstraintLayout>
